# AIStoCoTService

./: CMakeLists.txt  README.md
aislib/: ais.h  ais5.cpp
hasMain/: wmain.cpp
mongooseservice/: MongooseServiceLoop.cpp  SampleService.cpp  WebUI.cpp
serialLib/: a.txt
serialLib/CSerialPort/: SerialPort_global.h  ilog.hpp
src_AISPARSE/: AISObject.h  AISParser.cpp  AISParser.h  AISVessel.cpp  AISVessel.h  _AISParser.cpp  _AISParser.h  mapEntity.h
src_COT/: COTSender.cpp  COTSender.h  CoT.h  bg_TakMessage.cpp  bg_TakMessage.h
src_app/: AIStoCoT.h  MySerialPortListener.cpp  MySerialPortListener.h  hasMain.cpp  hasMainWeb.cpp
src_base/: BG_SocketBase.cpp  BG_SocketBase.h  csv.hpp
web_root/: AISToCoT.ini  MaritimeIdentificationDigits.csv  hostilitylist.csv  index.html  knownvessels.csv  webui.html
windowsservice/: ServiceBase.cpp  ServiceBase.h
